# codex-Skills

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
skills/frontend-design/: SKILL.md
src/: commands.rs  config.rs  loader.rs  main.rs  matching.rs  skill.rs
tests/: list_output.rs  pick_matching.rs  pick_regressions.rs  pick_show_full_content.rs
