[package]
name = "codex-skills"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
include_dir = "0.7"
serde_json = "1"
strsim = "0.11"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
